--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,6 @@
-blinker==1.4
-click==7.1.1
-dominate==2.5.1
-face-recognition-models==0.3.0
-Flask==1.1.2
-Flask-Bootstrap==3.3.7.1
-Flask-Mail==0.9.1
-Flask-Session==0.3.1
-Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.3
-itsdangerous==1.1.0
-Jinja2==2.11.1
-MarkupSafe==1.1.1
-numpy==1.18.2
-pandas==1.0.3
-Pillow==7.1.1
-python-dateutil==2.8.1
-pytz==2019.3
-six==1.14.0
-SQLAlchemy==1.3.15
-visitor==0.1.3
-Werkzeug==1.0.1
-WTForms==2.2.1
+numpy==1.18.1
+pandas==1.1.4
+torchvision==0.6.0
+torch==1.5.0
+matplotlib==3.3.3
+Pillow==8.1.1
